# libzathura-gtk

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README  config.mk  libzathura-gtk.pc.in  meson.build  meson_options.txt
doc/: Doxyfile  conf.py  index.rst  installation.rst  meson.build
doc/api/: index.rst
doc/development/: contributing.rst  index.rst
doc/man/: conf.py
examples/: Makefile  config.mk  main.c  meson.build
libzathura-gtk/: document.c  document.h  libzathura-gtk.h  page-widget.c  page.c  page.h  utils.c  utils.h  version.h  version.h.in
libzathura-gtk/document/: callbacks.c  callbacks.h  document.c  document.h  grid.c  grid.h  internal.h  types.h
libzathura-gtk/page/: callbacks.c  callbacks.h  internal.h  page.c  page.h  rotated-bin.c  rotated-bin.h  utils.c  utils.h
libzathura-gtk/page/annotations/: annotation-3d.c  annotation-3d.h  annotation-caret.c  annotation-caret.h  annotation-circle.c  annotation-circle.h  annotation-file-attachment.c  annotation-file-attachment.h  annotation-free-text.c  annotation-free-text.h  annotation-highlight.c  annotation-highlight.h  annotation-ink.c  annotation-ink.h  annotation-line.c  annotation-line.h  annotation-link.c  annotation-link.h  annotation-movie.c  annotation-movie.h  annotation-polygon.c  annotation-polygon.h  annotation-polyline.c  annotation-polyline.h  annotation-printer-mark.c  annotation-printer-mark.h  annotation-screen.c  annotation-screen.h  annotation-sound.c  annotation-sound.h  annotation-square.c  annotation-square.h  annotation-squiggly.c  annotation-squiggly.h  annotation-stamp.c  annotation-stamp.h  annotation-strike-out.c  annotation-strike-out.h  annotation-text.c  annotation-text.h  (+14 more)
libzathura-gtk/page/form-fields/: editor.c  editor.h  form-field-button.c  form-field-button.h  form-field-choice.c  form-field-choice.h  form-field-text.c  form-field-text.h
libzathura-gtk/widgets/: rotated-bin.c  rotated-bin.h
tests/: Makefile  config.mk  document.c  meson.build  page.c  tests.c  utils.c  utils.h
tests/plugin/: config.mk  meson.build  plugin.c
